# vercel-twitter

./: Procfile  cookies.pkl  pyproject.toml  requirements.txt  vault.csv
api/: index.py
api/utils/: __init__.py  bubba.py  vertex_tokens.csv
