[requires]
python_version = "3.9"

[project.dependencies]
anyio==3.7.1
APScheduler==3.10.1
attrs==23.1.0
bleach==6.0.0
blinker==1.6.2
certifi==2023.5.7
cffi==1.15.1
charset-normalizer==3.2.0
click==8.1.6
click-log==0.4.0
colorama==0.4.6
deprecation==2.1.0
docutils==0.20.1
dotty-dict==1.3.1
exceptiongroup==1.1.2
Flask==2.3.2
Flask-Cors==4.0.0
gitdb==4.0.10
GitPython==3.1.32
gotrue==1.0.2
h11==0.14.0
httpcore==0.16.3
httpx==0.23.3
idna==3.4
importlib-metadata==6.8.0
invoke==1.7.3
itsdangerous==2.1.2
jaraco.classes==3.3.0
Jinja2==3.1.2
keyring==24.2.0
MarkupSafe==2.1.3
more-itertools==9.1.0
outcome==1.2.0
packaging==23.1
pkginfo==1.9.6
postgrest==0.10.6
pycparser==2.21
pydantic==1.10.11
Pygments==2.15.1
PySocks==1.7.1
python-dateutil==2.8.2
python-dotenv==1.0.0
python-gitlab==3.15.0
python-semantic-release==7.33.2
pytz==2023.3
pywin32-ctypes==0.2.2
readme-renderer==40.0
realtime==1.0.0
requests==2.31.0
requests-toolbelt==1.0.0
rfc3986==1.5.0
selenium==4.10.0
semver==2.13.0
six==1.16.0
smmap==5.0.0
sniffio==1.3.0
sortedcontainers==2.4.0
storage3==0.5.2
StrEnum==0.4.15
supabase==1.0.3
supafunc==0.2.2
tomlkit==0.11.8
tqdm==4.65.0
trio==0.22.2
trio-websocket==0.10.3
twine==3.8.0
typing_extensions==4.7.1
tzdata==2023.3
tzlocal==5.0.1
urllib3==2.0.4
webdriver-manager==3.8.6
webencodings==0.5.1
websockets==10.4
Werkzeug==2.3.6
wsproto==1.2.0
zipp==3.16.2
[project]
name = "twit-bot-joe"
version = "0.1.0"
description = "Twitter bot"
authors = ["kevinbuisch@comcast.net"]